--- a/Css/Css.css
+++ b/Css/Css.css
@@ -175,3 +175,10 @@
   font-size: 16px;
   color: #555;
 }
+.footer {
+  background-color: #2c3e50;
+  color: white;
+  text-align: center;
+  padding: 20px 10px;
+  font-size: 14px;
+}
