--- a/Css/Css.css
+++ b/Css/Css.css
@@ -101,12 +101,20 @@
 
 /* Contenido sobre el video */
 .inicio-content {
+    opacity:0;
     position: relative;
     text-align: center;
     top: 50%;
-    transform: translateY(-50%);
+    transform: scale(0.6);;
     color: white;
     padding: 0 20px;
+    animation: aparecerZoom 1.2s ease forwards;
+}
+@keyframes aparecerZoom {
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 .inicio-content h1 {
@@ -176,9 +184,15 @@
   color: #555;
 }
 .footer {
+  
   background-color: #2c3e50;
-  color: white;
   text-align: center;
-  padding: 20px 10px;
-  font-size: 14px;
+  padding: 15px;
+}
+
+.footer a {
+  color: white;
+  font-size: 20px;
+  margin: 0 10px;
+  text-decoration: none;
 }
