--- a/Css/Css.css
+++ b/Css/Css.css
@@ -3,113 +3,120 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
 /* Navbar básica */
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #3498db;
-    font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #3498db;
+  font-family: Arial, sans-serif;
 }
 
 .navbar .logo h1 {
-    margin: 0;
-    color: white;
+  margin: 0;
+  color: white;
 }
 
 /* Menú principal */
 .menu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
 .menu>li {
-    position: relative;
-    margin-left: -41%;
+  position: relative;
+  margin-left: -41%;
 }
 
 .menu>li>a {
-    display: block;
-    padding: 10px 20px;
-    color: white;
-    text-decoration: none;
+  display: block;
+  padding: 10px 20px;
+  color: white;
+  text-decoration: none;
 }
 
 .menu>li>a:hover {
-    background-color: #2980b9;
+  background-color: #2980b9;
 }
 
 /* Submenú oculto por defecto */
 .submenu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    background-color: #2980b9;
-    min-width: 150px;
-    z-index: 10;
+  display: none;
+  position: absolute;
+  top: 0%;
+  right: 100%;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background-color: #2980b9;
+  min-width: 150px;
+  z-index: 10;
 }
 
 .submenu li a {
-    display: block;
-    padding: 10px 15px;
-    color: white;
-    text-decoration: none;
+  display: block;
+  padding: 10px 15px;
+  color: white;
+  text-decoration: none;
 }
 
 .submenu li a:hover {
-    background-color: #1f618d;
+  background-color: #1f618d;
 }
 
 /* Mostrar submenú al hacer hover */
 .menu>li.dropdown:hover .submenu {
-    display: block;
+  display: flex;
 }
 
-/* Opcional: flecha al lado de "Menú" */
-.menu>li.dropdown>a::after {
-    content: "▼";
-    font-size: 12px;
+.menu>li.dropdown>a::before {
+  content: "▼";
+  font-size: 12px;
 }
 
 .inicio {
-    position: relative;
-    height: 60vh;
-    /* ocupa toda la pantalla */
-    width: 100%;
-    overflow: hidden;
+  position: relative;
+  height: 60vh;
+  /* ocupa toda la pantalla */
+  width: 100%;
+  overflow: hidden;
 }
 
 /* Video de fondo */
 .inicio-video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* mantiene proporción y llena pantalla */
-    transform: translate(-50%, -50%);
-    z-index: -1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* mantiene proporción y llena pantalla */
+  transform: translate(-50%, -50%);
+  z-index: -1;
 }
 
 /* Contenido sobre el video */
 .inicio-content {
-    opacity:0;
-    position: relative;
-    text-align: center;
-    top: 50%;
-    transform: scale(0.6);;
-    color: white;
-    padding: 0 20px;
-    animation: aparecerZoom 1.2s ease forwards;
+  opacity: 0;
+  position: relative;
+  text-align: center;
+  top: 50%;
+  transform: scale(0.6);
+  color: white;
+  padding: 0 20px;
+  animation: aparecerZoom 1.2s ease forwards;
 }
+
 @keyframes aparecerZoom {
   to {
     opacity: 1;
@@ -118,27 +125,27 @@
 }
 
 .inicio-content h1 {
-    font-size: 48px;
-    margin-bottom: 20px;
+  font-size: 48px;
+  margin-bottom: 20px;
 }
 
 .inicio-content p {
-    font-size: 20px;
-    margin-bottom: 30px;
+  font-size: 20px;
+  margin-bottom: 30px;
 }
 
 .inicio-content .btn {
-    text-decoration: none;
-    background-color: #ffeb3b;
-    color: #333;
-    padding: 12px 25px;
-    border-radius: 5px;
-    font-weight: bold;
-    transition: background-color 0.3s;
+  text-decoration: none;
+  background-color: #ffeb3b;
+  color: #333;
+  padding: 12px 25px;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: background-color 0.3s;
 }
 
 .inicio-content .btn:hover {
-    background-color: #f1c40f;
+  background-color: #f1c40f;
 }
 
 .como-funciona {
@@ -163,7 +170,7 @@
 /* Card individual */
 .card {
   background-color: white;
-  width: 280px;
+  width: 30%;
   padding: 30px 20px;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -183,8 +190,59 @@
   font-size: 16px;
   color: #555;
 }
+
+.galeria-profesores {
+  padding: 60px 20px;
+  background-color: #ffffff;
+  text-align: center;
+}
+
+.galeria-profesores h2 {
+  font-size: 32px;
+  margin-bottom: 40px;
+}
+
+.galeria {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+/* Profesor */
+.profesor {
+  width: 280px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Imagen */
+.profesor img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+/* Texto */
+.profesor figcaption {
+  padding: 15px;
+}
+
+.profesor h3 {
+  margin-bottom: 10px;
+  color: #3498db;
+}
+
+.profesor p {
+  font-size: 15px;
+  color: #555;
+}
+
+
 .footer {
-  
+  color: white;
   background-color: #2c3e50;
   text-align: center;
   padding: 15px;
@@ -195,4 +253,8 @@
   font-size: 20px;
   margin: 0 10px;
   text-decoration: none;
+}
+
+.footer p {
+  padding-bottom: 15px;
 }
