--- a/Css/Css.css
+++ b/Css/Css.css
@@ -283,38 +283,31 @@ header {
 }
 
 .carrusel {
-  width: 100%;
-  max-width: 900px;
-  margin: 40px auto;
   overflow: hidden;
-}
-
-.carrusel-seccion h2 {
-  text-align: center;
 }
 
 .carrusel-track {
   display: flex;
-  width: 800%;
-  animation: carruselSteps 180s linear infinite;
+  gap: 20px;
+  width: max-content;
+  animation: scrollInfinito 40s linear infinite;
 }
 
 .carrusel-track img {
-  width: 12.5%;
-  height: 420px;
+  width: 500px;
+  height: 600px;
   object-fit: cover;
-  border-radius: 10px;
 }
 
-
-@keyframes carruselSteps {
+@keyframes scrollInfinito {
   from {
     transform: translateX(0);
   }
   to {
-    transform: translateX(-700%);
+    transform: translateX(-50%);
   }
 }
+
 
 
 .servicios {
@@ -351,6 +344,7 @@ header {
 .tabla-servicios tr:nth-child(even) {
   background-color: #f9f9f9;
 }
+
 .contacto {
   padding: 60px 20px;
   background-color: #f5f5f5;
@@ -368,7 +362,7 @@ header {
   background-color: white;
   padding: 30px;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   gap: 15px;
